# linfbb

./: .gitignore  20_epurmess  20_epursat  20_epurwp  AUTHORS  CHANGES  CMakeLists.txt  ChangeLog  FBBTREE  INFO  INSTALL.md  Makefile  Makefile.am  Makefile.in  README  README_KERNEL_2.0  autogen.sh  config.h.in  configure  configure.ac  fbb  fbb.sh  fbbgetconf.1  install_sh
conf/: fbb.conf.min.sample  fbb.conf.sample
doc/: Makefile.am  Makefile.in  fbb.conf.min.sample.in  fbb.conf.sample.in  fbb.sh.in  satdoc-e.doc  satdoc-f.doc
doc/html/: Makefile.am  Makefile.in  doc.htm  docackno.htm  docappen.htm  docbbs.htm  docconf.htm  docconts.htm  doccopyr.htm  doccstat.htm  docdocut.htm  docedit.htm  docfeatu.htm  docfirst.htm  docform.htm  docfwcom.htm  docfwpro.htm  docgloss.htm  doclined.htm  docmisc.htm  docnomen.htm  docqthlo.htm  docrecme.htm  docserv.htm  doctraje.htm  docvaria.htm  docwild.htm  docwp.htm  fbpq.htm  fdrsi.htm  finittnc.htm  fkam.htm  fmnewdoc.htm  fmstatis.htm  fmt_afro.htm  fmtack.htm  fmtappel.htm  fmtbbs.htm  fmtbeaco.htm  fmtconfi.htm  (+55 more)
docs/: satdoc-f.doc  satupdat.doc
docs/html/: docfbbd.htm  docfunck.htm  docgate.htm  docmined.htm  docproc.htm  docsysop.htm  doctrick.htm  fmtdirme.htm  fmtdsz.htm  fmtems.htm  fmtfbcm.htm  fmtfilfi.htm  fmtmemo.htm  fmtmulti.htm  fmtnewdo.htm  fmtpassw.htm  fmtpg.htm  fmtphnmo.htm  fmtreqcf.htm  fmtreqfi.htm  fmtrunfb.htm  fmtserv.htm  fmtswapp.htm  fmtunpro.htm  fmtxfbb.htm  tllinux.htm  toolminf.htm  toolsatu.htm  toolsetu.htm
etc/: Makefile.am  Makefile.in  amsat.fwd.in  fbbopt.conf.in  forward.sys  port.sys.sample.in  protect.sys.in  redist.sys  reject.sys  swapp.sys  themes.sys
etc/lang/: english.hlp  english.inf  francais.hlp  francais.inf  francais.txt
fwd/: amsat.fwd
include/: Makefile.am  Makefile.in  config.h.in  crc.h  fbb.xbm  fbb_conf.h  fbb_dec.h  fbb_drv.h  fbb_orb.h  fbb_serv.h  fbb_var.h  fmtheaders.h  fortify.h  global.h  md5.h  modem.h  pbsv.h  serv.h  sysinfo.h  terminal.h  ufortify.h  version.h  xfbb.h  xfbbX.h  yapp.h
m4/: ax_with_curses.m4
man/: Makefile.am  Makefile.in  fbb.8  xfbbC.8  xfbbd.8
scripts/: 20_epurmess.in  20_epursat.in  20_epurwp.in  Makefile.am  Makefile.in  fbb.in  xfbbX
src/: Makefile  Makefile.am  Makefile.in  aff_stat.c  ajoursat.c  arbre.c  autobin.c  balise.c  bidexms.c  clr_user.c  conf.c  console.c  date.c  devio.c  dos_1.c  dos_dir.c  driver.c  drv_aea.c  drv_ded.c  drv_hst.c  drv_kam.c  drv_mod.c  drv_pop.c  drv_sock.c  drv_tcp.c  edit.c  ems.c  epurmess.c  epurwp.c  epurwp.res  error.c  error.sys  exec_pg.c  fbb_conf.c  fbb_conf.c.in  fbb_orb.c  fbbgetconf.c  ff_attrib  fortify.c  forward.c  (+74 more)
src/X11/: Makefile  Makefile.am  Makefile.in  xeditor.c  xfbb.c  xfbbX  xfbbX.c  xfbbXabtd.c  xfbbXcnsl.c  xfbbabtd.c  xfbbcnsl.c  xfbbedtm.c  xfbbedtu.c  xfbblcnx.c  xfbbmain.c  xfbbpndd.c
src/X11/res/: xfbb
src/X11/res/bitmaps/: allchan.xpm  allchn_u.xpm  channel.xpm  consol_u.xpm  console.xpm  copy.xpm  copy_u.xpm  cut.xpm  cut_u.xpm  deliver.xpm  discon_u.xpm  disconn.xpm  edit_u.xpm  editjust.xpm  editm_u.xpm  editmsg.xpm  editor.xpm  editsysf.xpm  editus_u.xpm  edituser.xpm  editwrap.xpm  export.xpm  find.xpm  find_u.xpm  findnext.xpm  gatew_u.xpm  gateway.xpm  help.xpm  help_u.xpm  import.xpm  just_u.xpm  listcn_u.xpm  listcnx.xpm  monit_u.xpm  monitor.xpm  new.xpm  next.xpm  next_u.xpm  onechan.xpm  onechn_u.xpm  (+28 more)
