docdir = $(datadir)/doc/@PACKAGE@/html
doc_DATA = docackno.htm  docfwcom.htm  doctraje.htm  fmt_afro.htm\
	fmtetat.htm   fmtmess.htm   fmtrunfb.htm  fmtyappl.htm  toolfv.htm\
	docappen.htm  docfwpro.htm  doctrick.htm  fmtappel.htm  fmtfbbio.htm\
	fmtmulti.htm  fmtsatel.htm  fpk232.htm    toolinst.htm  docbbs.htm\
	docgate.htm   docvaria.htm  fmtbbs.htm    fmtfbcm.htm   fmtnewdo.htm\
	fmtsat.htm    ftfpcx.htm    toolisda.htm  docconf.htm   docgloss.htm\
	docwild.htm   fmtbeaco.htm  fmtfilfi.htm  fmtoptio.htm  fmtserv.htm\
	ftlock.htm    toollgst.htm  docconts.htm  doc.htm       docwp.htm\
	fmtconfi.htm  fmtforwa.htm  fmtpassw.htm  fmtswapp.htm  ftpe1chl.htm\
	toolminf.htm  doccopyr.htm  doclined.htm  fbpq.htm      fmtcron.htm\
	fmtheard.htm  fmtpg.htm     fmttelne.htm  fttfwin.htm   toolmkpg.htm\
	doccstat.htm  docmined.htm  fdrsi.htm     fmtdirme.htm  fmtinf.htm\
	fmtphnmo.htm  fmttheme.htm  tlfbb_zm.htm  toolmrej.htm  docdocut.htm\
	docmisc.htm   finittnc.htm  fmtdriv.htm   fmtinit.htm   fmtport.htm\
	fmttpsta.htm  tllinux.htm   toolsatu.htm  docedit.htm   docnomen.htm\
	fkam.htm      fmtdsz.htm    fmtlang.htm   fmtprote.htm  fmttxt.htm\
	tlxfbbc.htm   toolsetu.htm  docfbbd.htm   docproc.htm   fmnewdoc.htm\
	fmtems.htm    fmtlog.htm    fmtredis.htm  fmtunpro.htm  toolclea.htm\
	toolslee.htm  docfeatu.htm  docqthlo.htm  fmstatis.htm  fmtepurm.htm\
	fmtmail.htm   fmtrejec.htm  fmtwfbid.htm  toolclus.htm  toolview.htm\
	docfirst.htm  docrecme.htm  fmtack.htm    fmterror.htm  fmtmaint.htm\
	fmtreqcf.htm  fmtwpsys.htm  toolcut.htm   docform.htm   docserv.htm\
	fmt_afax.htm  fmtess.htm    fmtmemo.htm   fmtreqdi.htm  fmtxfbb.htm\
	toolepum.htm  docfunck.htm  docsysop.htm  fmt_afne.htm  fmtesska.htm\
	fmtmesfi.htm  fmtreqfi.htm  fmtyapex.htm  toolepwp.htm

EXTRA_DIST = $(doc_DATA)

